[gd_scene load_steps=10 format=3 uid="uid://ce2kdkha7w27"]

[ext_resource type="Script" path="res://levels/level_4/level_4.gd" id="1_it3b4"]
[ext_resource type="PackedScene" uid="uid://b6tg1l8pm2s2s" path="res://dialogue/dialogue_scene.tscn" id="2_0gw3k"]
[ext_resource type="Texture2D" uid="uid://btlfs2epco1pi" path="res://assets/Levels/Level7/algod.png" id="3_ygeax"]
[ext_resource type="Texture2D" uid="uid://bjx6ntf7x7mtq" path="res://assets/Levels/Level7/BRAÇO SANGUE.png" id="4_om0qj"]
[ext_resource type="Texture2D" uid="uid://c4yliohfv10l3" path="res://assets/Levels/Level7/seringapng.png" id="5_ge6pi"]
[ext_resource type="Script" path="res://levels/level_4/Seringapng.gd" id="6_nf1hg"]
[ext_resource type="Texture2D" uid="uid://4g3tdktwb6e1" path="res://assets/ui/smaller.png" id="7_qgq0b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_puaqk"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lospy"]

[node name="Level4" type="Node2D"]
script = ExtResource("1_it3b4")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
expand_mode = 2
metadata/_edit_lock_ = true

[node name="DialogueScene" parent="." instance=ExtResource("2_0gw3k")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Algod" type="Sprite2D" parent="."]
position = Vector2(280, 432)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_ygeax")

[node name="BraçoSangue" type="Sprite2D" parent="."]
position = Vector2(1051, 336)
scale = Vector2(0.378738, 0.378738)
texture = ExtResource("4_om0qj")

[node name="Seringapng" type="Sprite2D" parent="."]
position = Vector2(-112, 0)
scale = Vector2(0.15, 0.235)
texture = ExtResource("5_ge6pi")
script = ExtResource("6_nf1hg")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
flat = true

[node name="InnerArrows" type="Sprite2D" parent="."]
position = Vector2(832, 392)
scale = Vector2(0.96, 0.96)
texture = ExtResource("7_qgq0b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="InnerArrows"]

[node name="Button2" type="Button" parent="."]
offset_left = 984.0
offset_top = 432.0
offset_right = 1016.0
offset_bottom = 464.0
theme_override_styles/normal = SubResource("StyleBoxFlat_puaqk")
theme_override_styles/hover = SubResource("StyleBoxFlat_puaqk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_puaqk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lospy")

[connection signal="next_button_pressed" from="DialogueScene" to="." method="_on_dialogue_scene_next_button_pressed"]
